# YAMC

./: .gitignore  AIDE.txt  README.md  meson.build
src/: config.h  cube.c  cube.h  draw.c  draw.h  item.c  item.h  main.c  main.h  map.c  map.h  noise.c  noise.h  physics.c  physics.h  threads.h  util.c  util.h  world.c  world.h
